fix: ExchangeCard overflow style

--- a/packages/frontend/src/app/components/ExchangeCard/ExchangeCard.module.scss
+++ b/packages/frontend/src/app/components/ExchangeCard/ExchangeCard.module.scss
@@ -65,7 +65,8 @@
 
   &__accountName {
     align-self: stretch;
-    flex-grow: 1;
+    flex: 1 1 0;
+    width: 0;
     overflow: hidden;
     text-overflow: ellipsis;
     @include typography.textMD;
